# Practice-ML-DEV

./: .dockerignore  .gitignore  README.md  app.py  docker-compose.yaml  makefile  pyproject.toml  test.py
.github/workflows/: python-app.yml
artifacts/db/: healthcare.sqlite
docker/: Dockerfile
docs/: Design doc.md  README.md  Service documentation.md  designdoc.md
notebooks/: database.ipynb  research.ipynb
src/backend/: app.py  dependencies.py  models.py
src/backend/routers/: ml_model.py  token.py  user.py
src/db/: core.py  database.py
src/db/crud/: items.py  users.py
src/frontend/: index.html  style.css
test/: test_app.py
